# FastAPI_fashion

./: .gitignore  README.md  main.py  pyproject.toml  sql_app.db  tesst.py
api/: customer.py  employee.py  inventory.py  orders.py
api/utility/: customer.py  employee.py  inventory.py  orders.py
database/: db_setup.py
database/models/: people.py  products.py
db/: db_setup.py
db/models/: people.py  products.py
pydantic_schemas/: people.py  products.py
